# my-wc

./: .gitignore  CMakeLists.txt  LICENSE  README.md  lint  test-small.txt
src/: CMakeLists.txt  args_reader.cpp  args_reader.h  counter.cpp  counter.h  counts.cpp  counts.h  main.cpp  options.cpp  options.h
test/: args_reader_test.cpp  counts_test.cpp  options_test.cpp  test_args_reader.cpp
